# tensorflow

./: .gitmodules  bazel_build.sh  build_aot.sh  build_aot_tests.sh  build_ir_emitter.sh  build_test.sh  build_vulkan.sh  tf_compile.sh  tfcompile_run.sh  validate_shader.sh
tensorflow/compiler/aot/: BUILD  compile.cc  compile.h  flags.cc  flags.h  tfcompile_main.cc
tensorflow/compiler/aot/tests/: make_test_graphs.py  test_graph_tfmatmul.pb
tensorflow/compiler/aot/tests/vulkan/: VulkanRuntime.cc  build_runtime.sh  compile_shader.sh  kernel_matmul_1.spvasm  kernel_matmul_2.spvasm  kernel_sort.spvasm  kernel_sum.spvasm  run_shader.sh
tensorflow/compiler/jit/: build_xla_ops_pass.cc  encapsulate_subgraphs_pass.cc  encapsulate_xla_computations_pass.cc  mark_for_compilation_pass.cc  xla_compilation_cache.cc  xla_compile_on_demand_op.cc  xla_compile_on_demand_op.h  xla_cpu_device.cc  xla_device.cc  xla_gpu_device.cc  xla_interpreter_device.cc
tensorflow/compiler/tf2xla/: BUILD  dump_graph.cc  functionalize_control_flow.cc  tf2xla.cc  xla_compiler.cc  xla_op_registry.cc
tensorflow/compiler/xla/client/: BUILD  client_library.cc  local_client.cc  xla_builder_test.cc
tensorflow/compiler/xla/service/: BUILD  backend.cc  compiler.h  generic_transfer_manager.cc  hlo_memory_scheduler.cc  hlo_memory_scheduler_test.cc  hlo_rematerialization.cc  hlo_runner.cc  local_service.cc  platform_util.cc  service.cc  transfer_manager.cc
tensorflow/compiler/xla/service/cpu/: cpu_compiler.cc
tensorflow/compiler/xla/service/gpu/: BUILD  gpu_hlo_schedule.cc  kernel_thunk.cc  nvptx_compiler.cc  spirv_ir_emitter.cc  spirv_ir_emitter.h  vulkan_compiler.cc  vulkan_compiler.h
tensorflow/compiler/xla/service/spirv_ir/: BUILD  TODO.txt  (+7 more)
tensorflow/core/common_runtime/: device_factory.cc  direct_session.cc  executor.cc  session.cc
tensorflow/core/common_runtime/gpu/: gpu_device.cc
tensorflow/lite/examples/minimal/: CMakeLists.txt  minimal.cc
tensorflow/stream_executor/: stream_executor_pimpl.cc
tensorflow/stream_executor/cuda/: cuda_driver.cc  cuda_gpu_executor.cc
tensorflow/stream_executor/vulkan/: BUILD  vulkan_platform_id.cc  vulkan_platform_id.h
(+1 files in other folders)
